    files and not directories. (Jing Zhao via suresh)

Release 2.0.2-alpha - 2012-09-07 

  INCOMPATIBLE CHANGES

    HADOOP-8388. Remove unused BlockLocation serialization.
    (Colin Patrick McCabe via eli)

    HADOOP-8689. Make trash a server side configuration option. (eli)

    HADOOP-8710. Remove ability for users to easily run the trash emptire. (eli)

  NEW FEATURES
 
    HDFS-3042. Automatic failover support for NameNode HA (todd)
    (see dedicated section below for breakdown of subtasks)

    HADOOP-8135. Add ByteBufferReadable interface to FSDataInputStream. (Henry
    Robinson via atm)

    HADOOP-8458. Add management hook to AuthenticationHandler to enable 
    delegation token operations support (tucu)

    HADOOP-8465. hadoop-auth should support ephemeral authentication (tucu)

    HADOOP-8644. AuthenticatedURL should be able to use SSLFactory. (tucu)

    HADOOP-8581. add support for HTTPS to the web UIs. (tucu)

    HADOOP-7754. Expose file descriptors from Hadoop-wrapped local 
    FileSystems (todd and ahmed via tucu)

    HADOOP-8240. Add a new API to allow users to specify a checksum type
    on FileSystem.create(..).  (Kihwal Lee via szetszwo)

  IMPROVEMENTS

    HADOOP-8340. SNAPSHOT build versions should compare as less than their eventual
    final release. (todd)

    HADOOP-8361. Avoid out-of-memory problems when deserializing strings.
    (Colin Patrick McCabe via eli)

    HADOOP-8224. Don't hardcode hdfs.audit.logger in the scripts.
    (Tomohiko Kinebuchi via eli)

    HADOOP-8398. Cleanup BlockLocation. (eli)

    HADOOP-8422. Deprecate FileSystem#getDefault* and getServerDefault
    methods that don't take a Path argument. (eli)

    HADOOP-8323. Add javadoc and tests for Text.clear() behavior (harsh)

    HADOOP-8358. Config-related WARN for dfs.web.ugi can be avoided. (harsh)

    HADOOP-8450. Remove src/test/system. (eli)

    HADOOP-8244. Improve comments on ByteBufferReadable.read. (Henry Robinson
    via atm)
